tests/fixtures/invalid/aggregate_compound_literal_const_field_assignment.c
struct Config {
    const int magic;
    int value;
};

int main(void) {
    return ((struct Config){1, 2}).magic = 3;
}
